helloworld/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
    - host: hello.10.0.0.8.nip.io 
      http:
        paths:
        - backend:
            serviceName: hello-service
            servicePort: 80
          path: /
